--- a/app/src/main/res/layout/fragment_example_viewpager.xml
+++ b/app/src/main/res/layout/fragment_example_viewpager.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:background="@color/colorBackgroundDark"/>
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager"
